# pn-sequence

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/pn_sequence/: __init__.py
tests/: test_postulates.py
