[project]
name = "pn-sequence"
version = "0.1.0"
description = "A library for testing pseudo-noise (PN) sequences."
authors = [
    {name = "rivst",email = "rivst@posteo.me"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "pn_sequence", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
